# ocean-workspace

./: .gitignore  Cargo.toml
crate/ocean-db/: Cargo.toml
ocean-db/: Cargo.toml
ocean-db/src/sqlite/: execute.rs
ocean-db/tests/: demo.rs
ocean-macros/: Cargo.toml
ocean-macros/src/: struct_field_helper.rs
ocean_db/: Cargo.toml
ocean_db/src/sqlite/: execute.rs  mod.rs  model.rs
