[workspace]
##
resolver = "2"
##
##
members = [
    "ocean_db",
    "ocean_macros"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jarkata/ocean-workspace.git"

[workspace.dependencies]
ocean_macros = { path = "ocean_macros" }
ocean_db = { path = "ocean_db" }