[package]
name = "ocean_db"
version = "0.1.0"
edition = "2021"


[lib]
name = "ocean_db"
path = "src/lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
##
dirs = "6.0.0"
##
##
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4" }
ocean_macros = { workspace = true }
